# montecarlo

./: README.md  config.json  main.py  pyproject.toml
output/: Calculation of passenger flow for TWIN elevators .xlsx  Calculation of passenger flow for TWIN elevators _xizhi.xlsx
src/: building.py  car.py  config_protocol.py  exception.py  experiment.py  floor.py  passenger.py
tests/: kinematics.py  test_building.py  test_passenger.py
